<resources>
    <string name="app_name">Rally-Info</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exit_app_show_dialog_text">Вы хотите выйти из приложения?</string>
    <string name="nav_main">Главная</string>
    <string name="nav_wrc_results">Результаты WRC</string>
    <string name="nav_wrc_stream">Трансляция WRC</string>
    <string name="nav_dakar_results">Результаты Дакара</string>
    <string name="nav_video_wrc">Видео WRC</string>
    <string name="nav_video_dakar">Видео Дакара</string>
    <string name="nav_news_wrc">Новости WRC</string>
    <string name="nav_news_erc">Новости ERC</string>
    <string name="nav_news_dakar">Новости Дакара</string>
    <string name="nav_exit">Выход из приложения</string>

    <string name="open">open</string>
    <string name="close">close</string>
</resources>