<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/nav_main"
        android:title="@string/nav_main"
        android:icon="@drawable/ic_baseline_horizontal_rule_24"/>
    <item
        android:id="@+id/nav_wrc_results"
        android:title="@string/nav_wrc_results"
        android:icon="@drawable/ic_baseline_horizontal_rule_24"/>
    <item
        android:id="@+id/nav_wrc_stream"
        android:title="@string/nav_wrc_stream"
        android:icon="@drawable/ic_baseline_horizontal_rule_24"/>
    <item
        android:id="@+id/nav_dakar_results"
        android:title="@string/nav_dakar_results"
        android:icon="@drawable/ic_baseline_horizontal_rule_24"/>
    <item
        android:id="@+id/nav_video_wrc"
        android:title="@string/nav_video_wrc"
        android:icon="@drawable/ic_baseline_horizontal_rule_24"/>
    <item
        android:id="@+id/nav_video_dakar"
        android:title="@string/nav_video_dakar"
        android:icon="@drawable/ic_baseline_horizontal_rule_24"/>
    <item
        android:id="@+id/nav_news_wrc"
        android:title="@string/nav_news_wrc"
        android:icon="@drawable/ic_baseline_horizontal_rule_24"/>
    <item
        android:id="@+id/nav_news_erc"
        android:title="@string/nav_news_erc"
        android:icon="@drawable/ic_baseline_horizontal_rule_24"/>
    <item
        android:id="@+id/nav_news_dakar"
        android:title="@string/nav_news_dakar"
        android:icon="@drawable/ic_baseline_horizontal_rule_24"/>
    <item
        android:id="@+id/nav_exit"
        android:title="@string/nav_exit"
        android:icon="@drawable/ic_baseline_horizontal_rule_24"/>
</menu>